--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,11 @@
 {
-    "dependencies": {
+  "dependencies": {
     "com.ptc.vuforia.engine": "git+https://git-packages.developer.vuforia.com#9.8.13",
     "com.unity.collab-proxy": "1.15.16",
     "com.unity.ide.rider": "3.0.14",
     "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.recorder": "3.0.3",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
